--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -299,8 +299,7 @@
   </div>
 
   <!-- ======================= Cards ================== -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" defer></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" defer></script>
   <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js" defer></script>
   <%- include('./partials/footer.html') %>
 
