--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -7,4 +7,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" defer></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
-<script type="module" src="../scripts/script.js"></script>
+<script type="module" src="../scripts/script.js" defer></script>
