--- a/src/views/partials/navigationDashboard.html
+++ b/src/views/partials/navigationDashboard.html
@@ -123,7 +123,7 @@
       </li>
 
     <li class="menu-item">
-      <a href="../" class="menu-item-link">
+      <a href="../logout" class="menu-item-link">
         <span class="icon">
           <ion-icon name="log-out-outline"></ion-icon>
         </span>
