--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -8,7 +8,6 @@
   <%- include('./partials/head.html') %>
   <link rel="stylesheet" href="../css/dashboard.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css" />
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body class="<%= pagina %> <%= partial %>">
@@ -299,7 +298,7 @@
   </div>
 
   <!-- ======================= Cards ================== -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" defer></script>
   <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js" defer></script>
   <%- include('./partials/footer.html') %>
 
