--- a/src/views/partials/nav.html
+++ b/src/views/partials/nav.html
@@ -2,7 +2,7 @@
   <div class="logo-header"><span class="bebas">UNITEC</span></div>
   <div class="menu-side satoshi">
     <button class="order-btn satoshi">Ordena ahora</button>
-    <span>Menu</span>
+    <span class="menu-label">Menu</span>
     <i class="fa fa-bars menu-icon"></i>
   </div>
 </header>
