--- a/src/views/product.html
+++ b/src/views/product.html
@@ -16,12 +16,12 @@
 
   <section class="product-container">
     <div class="product-image">
-      <img src="../images/1.webp" alt="">
+      <img id="product-img" src="">
     </div>
     <div class="product-description satoshi">
-      <h1 id="product-name">Audifonos Unitec</h1>
-      <h2 id="product-price">$380.000</h2>
-      <p id="product-description" class="satoshi light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aliquid, cumque consequuntur adipisci esse dolorem molestias perspiciatis facere obcaecati inventore officia labore delectus, illum in soluta ipsam? Eligendi, sequi aperiam!</p>
+      <h1 id="product-name"></h1>
+      <h2 id="product-price"></h2>
+      <p id="product-description" class="satoshi light"></p>
       <button id="product-addcard" class="satoshi bold">Añadir al carrito</button>
     </div>
   </section>
