--- a/src/views/partials/carlist/list-container.html
+++ b/src/views/partials/carlist/list-container.html
@@ -10,20 +10,16 @@
         <hr> 
         <div class="subtotal light">
             <p>Envío</p>
-            <b>Gratis</b>
-        </div>
-        <div class="subtotal light">
-            <p>IVA</p>
-            <b>$500</b>
+            <b>-----</b>
         </div>
         <div class="subtotal light">
             <p>Subtotal</p>
-            <b>$380.000</b>
+            <b class="subtotal-car">$0</b>
         </div>
         <hr>
         <div class="total light">
             <p>Total</p>
-            <b>$380.500</b>
+            <b class="total-car">$0</b>
         </div>
         <button class="buy satoshi bold">SIGUIENTE</button>
         <div class="exit">
