--- a/src/views/partials/carlist/information-container.html
+++ b/src/views/partials/carlist/information-container.html
@@ -1,29 +1,54 @@
 <section class="information-container section-buy">
-    <form action="pagina_de_confirmacion.html" class="form-description satoshi">
-        <h2>Información personal</h2>
-        <label for="nombre_completo">Nombre completo:</label>
-        <input type="text" name="nombre_completo" id="nombre_completo" required>
-        <br><br>
-        <label for="correo_electronico">Correo electrónico:</label>
-        <input type="email" name="correo_electronico" id="correo_electronico" required>
-        <br><br>
-        <label for="numero_telefono">Número de teléfono:</label>
-        <input type="tel" name="numero_telefono" id="numero_telefono" required>
-        <br><br>
-        <label for="direccion_envio">Dirección de envío:</label>
-        <input type="text" name="direccion_envio" id="direccion_envio" required>
-        <br><br>
-        <label for="codigo_postal">Código postal:</label>
-        <input type="text" name="codigo_postal" id="codigo_postal" required>
-        <br><br>
-        <label for="ciudad_envio">Ciudad:</label>
-        <select name="ciudad_envio" id="ciudad_envio" required>
-          <option value="">Seleccione una ciudad</option>
-          <option value="PO">Popayán</option>
-          <option value="CA">Cali</option>
-          <option value="BO">Bogotá</option>
-        </select>
-        <br><br><br><br><br>
-        <input type="submit" value="Siguiente" class="satoshi bold">
-      </form>
+
+  <form class="form-description satoshi">
+    <h2>Información personal</h2>
+    <label for="nombre_completo">Nombre completo:</label>
+    <input type="text" name="nombre_completo" id="nombre_completo" required>
+    <br><br>
+    <label for="correo_electronico">Correo electrónico:</label>
+    <input type="email" name="correo_electronico" id="correo_electronico" required>
+    <br><br>
+    <label for="numero_telefono">Número de teléfono:</label>
+    <input type="tel" name="numero_telefono" id="numero_telefono" required>
+    <br><br>
+    <label for="direccion_envio">Dirección de envío:</label>
+    <input type="text" name="direccion_envio" id="direccion_envio" required>
+    <br><br>
+    <label for="codigo_postal">Código postal:</label>
+    <input type="text" name="codigo_postal" id="codigo_postal" required>
+    <br><br>
+    <label for="ciudad_envio">Ciudad:</label>
+    <select name="ciudad_envio" id="ciudad_envio" required>
+      <option value="">Seleccione una ciudad</option>
+      <option value="PO">Popayán</option>
+      <option value="CA">Cali</option>
+      <option value="BO">Bogotá</option>
+    </select>
+    <br><br><br><br><br>
+    <input type="submit" value="Siguiente" class="satoshi bold">
+  </form>
+
+  <div class="car-total satoshi">
+    <h2>Total</h2>
+    <hr>
+    <div class="subtotal light">
+      <p>Envío</p>
+      <b>-----</b>
+    </div>
+    <div class="subtotal light">
+      <p>Subtotal</p>
+      <b class="subtotal-car">$0</b>
+    </div>
+    <hr>
+    <div class="total light">
+      <p>Total</p>
+      <b class="total-car">$0</b>
+    </div>
+    <button class="buy satoshi bold">SIGUIENTE</button>
+    <div class="exit">
+      <ion-icon name="chevron-back-outline"></ion-icon>
+      <p>SEGUIR COMPRANDO</p>
+    </div>
+  </div>
+
 </section>
