--- a/src/views/partials/carlist/lineCarlist.html
+++ b/src/views/partials/carlist/lineCarlist.html
@@ -1,34 +1,34 @@
 <div class="progress-line">
-    <div class="swiper-container">
-        <div class="swiper-wrapper timeline satoshi">
-          <div class="swiper-slide">
-            <div class="timestamp">
-            </div>
-            <div class="status">
-              <span>Carrito</span>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="timestamp">
-            </div>
-            <div class="status">
-              <span class="light">Información</span>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="timestamp">
-            </div>
-            <div class="status">
-              <span>Pago</span>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="timestamp">
-            </div>
-            <div class="status">
-              <span>Confirmación</span>
-            </div>
-          </div>
+  <div class="swiper-container">
+    <div class="swiper-wrapper timeline satoshi">
+      <div class="swiper-slide">
+        <div class="timestamp">
+        </div>
+        <div class="status">
+          <span>Carrito</span>
         </div>
       </div>
+      <div class="swiper-slide">
+        <div class="timestamp">
+        </div>
+        <div class="status">
+          <span>Información</span>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="timestamp">
+        </div>
+        <div class="status">
+          <span>Pago</span>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="timestamp">
+        </div>
+        <div class="status">
+          <span>Confirmación</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
