--- a/src/views/partials/carlist/information-container.html
+++ b/src/views/partials/carlist/information-container.html
@@ -35,7 +35,7 @@
     <hr>
     <div class="subtotal light">
       <p>Envío</p>
-      <b>-----</b>
+      <b class="shippingPrice">-----</b>
     </div>
     <div class="subtotal light">
       <p>Subtotal</p>
