--- a/src/public/css/carlist.css
+++ b/src/public/css/carlist.css
@@ -185,6 +185,7 @@ h1 {
 .form-description .map{
     width: 100%;
     height: 300px;
+    margin-bottom: 30px;
 }
 
 /*PAYMENT*/
@@ -242,6 +243,148 @@ h1 {
     background-color: #333;
 }
 
+/*CONFIRMATION*/
+
+.confirmation-container{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 50vh;
+    position: relative;
+}
+
+.confirmation-container .message_user{
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.confirmation-container .message_user.disabled{
+    display: none;
+}
+
+.message_user h2{
+    font-size: 5em;
+}
+
+.message_user p{
+    font-size: 2em;
+}
+
+.message_user button{
+    margin-top: 50px;
+    height: 50px;
+    width: 30vw;
+    background-color: white;
+}
+
+.personal_information .marker{
+    font-weight: 800;
+}
+.personal_information .p_info,
+.personal_information .m_info{
+    font-weight: 100;
+    margin-bottom: 5px;
+}
+
+.information_shop{
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.information_shop.disabled{
+    display: none;
+}
+
+.information_shop .products_information_div{
+    width: 70%;
+    border: white 1px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.information_shop .products_information_div table{
+    width: 100%;
+    border-collapse: collapse;
+    border: solid white 1px;
+    text-align: center;
+    height: auto;
+}
+
+.information_shop table thead{
+    background-color: white;
+    color: black;
+    height: 50px;
+}
+
+.information_shop table thead th{
+    border: solid black 1px;
+}
+
+.information_shop table tbody td{
+    border: solid white 1px;
+    height: 50px;
+}
+
+.information_shop .personal_information{
+    width: 30%;
+}
+
+.information_shop .confirmation_btn{
+    width: 100%;
+    height: 60px;
+    margin-top: 30px;
+    border: none;
+    outline: none;
+    background-color: white;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 800;
+}
+
+.products_information_div .total_div{
+    width: 40%;
+    flex-direction: column;
+    background-color: white;
+    color: black;
+}
+
+.products_information_div .subtotal_div{
+    width: 60%;
+    border: solid white 1px;
+}
+
+.products_information_div .subtotal_div,
+.products_information_div .total_div{
+    margin-top: 20px;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+    height: 120px;
+}
+
+.subtotal_div .marker,
+.subtotal_div .m_info
+{
+    width: 50%;
+}
+
+.subtotal_div .marker,
+.total_div .marker{
+    font-weight: 800;
+}
 
 /*TIMELINE*/
 
@@ -329,28 +472,4 @@ h1 {
     width: 25%;
     text-align: center;
     font-size: 18px;
-}
-
-.confirmation-container{
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 50vh;
-}
-
-.confirmation-container h2{
-    font-size: 5em;
-}
-
-.confirmation-container p{
-    font-size: 2em;
-}
-
-.confirmation-container button{
-    margin-top: 50px;
-    height: 50px;
-    width: 30vw;
-    background-color: white;
 }
