--- a/src/views/partials/navigationDashboard.html
+++ b/src/views/partials/navigationDashboard.html
@@ -132,6 +132,15 @@
     </li>
 
     <li class="menu-item">
+      <a href="../dashboard/visits" class="menu-item-link">
+        <span class="icon">
+          <ion-icon name="earth-outline"></ion-icon>
+        </span>
+        <span class="title satoshi">Visitas</span>
+      </a>
+    </li>
+
+    <li class="menu-item">
       <a href="../logout" class="menu-item-link">
         <span class="icon">
           <ion-icon name="log-out-outline"></ion-icon>
