--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unitec</title>
+  <title>Audire</title>
   <%- include('./partials/head.html') %>
   <link rel="stylesheet" href="../css/index.css">
 </head>
@@ -17,7 +17,7 @@
 
   <section style="width: 100vw; min-height: 100vh; overflow: hidden; position: relative;" class="canvas-container">
     <div class="background-fixed">
-      <span class="bebas unitec">UNITEC</span>
+      <span class="bebas unitec">AUDIRE</span>
     </div>
     <div class="canvas-principal"></div>
     <canvas id="canvas-gradient" data-transition-in data-v-79abd109></canvas>
